# octopus-intelligence-home-assistant

./: .gitignore  ADDON_DEVELOPMENT.md  README.md  pyproject.toml  repository.yaml
home_assistant/: dashboard-card.yaml
home_assistant/www/: octopus-intelligence-chart.js
octopus_intelligence/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
octopus_intelligence/app/: README.md  pyproject.toml
octopus_intelligence/app/src/octopus_intelligence/: __init__.py  analysis.py  commentary.py  config.py  forecast.py  history.py  home_assistant.py  models.py  pipeline.py  scheduler.py
scripts/: sync_addon_source.sh
src/octopus_intelligence/: analysis.py  cli.py  commentary.py  config.py  pipeline.py  scheduler.py
tests/: test_analysis.py  test_commentary.py  test_config.py  test_forecast.py  test_history.py  test_pipeline.py  test_scheduler.py
tests/fixtures/: sample-ai-feed.txt
